[package]
name = "utf8-chars"
version = "0.2"
authors = ["warlock <internalmike@gmail.com>"]
description = "Char-per-char iterator and `read_char` method for `BufRead`."
readme = "README.md"
documentation = "https://docs.rs/utf8-chars/"
keywords = ["utf-8", "utf8", "chars", "iterator", "read_char"]
categories = ["encoding"]
license = "MIT/Apache-2.0"
repository = "https://github.com/A1-Triard/utf8-chars"

[dependencies]
arrayvec = "0.5.1"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
