[package]
edition = "2021"
name = "utf8-chars"
version = "2.1.0"
rust-version = "1.59"
authors = ["warlock <internalmike@gmail.com>"]
description = "Char-by-char iterator and `read_char` method for `BufRead`."
readme = "README.md"
documentation = "https://docs.rs/utf8-chars/"
keywords = ["utf-8", "utf8", "chars", "iterator", "read_char"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/utf8-chars"

[features]
default = []
bench = []

[dependencies]
arrayvec = "0.7.2"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"

[badges]
maintenance = { status = "passively-maintained" }
